--- a/src/main/resources/fast-jfinal.properties
+++ b/src/main/resources/fast-jfinal.properties
@@ -1,5 +1,5 @@
 server.port=8080
-server.context.path=
+server.context.path=/demo
 server.static.path=static
 tomcat.base.dir=/tmp/tomcat
 jfinal.config.class=org.piaohao.fast.jfinal.demo.DemoConfig
